; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_wayland_common.c_window_move.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_wayland_common.c_window_move.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo_wayland_state = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo_wayland_state*, i32)* @window_move to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @window_move(%struct.vo_wayland_state* %0, i32 %1) #0 {
  %3 = alloca %struct.vo_wayland_state*, align 8
  %4 = alloca i32, align 4
  store %struct.vo_wayland_state* %0, %struct.vo_wayland_state** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %3, align 8
  %6 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %18

9:                                                ; preds = %2
  %10 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %3, align 8
  %11 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %3, align 8
  %14 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @xdg_toplevel_move(i64 %12, i32 %15, i32 %16)
  br label %18

18:                                               ; preds = %9, %2
  ret void
}

declare dso_local i32 @xdg_toplevel_move(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
